samples/errors/ambiguous-func-ref.stkn
func fn0()
    func ambiguous(x, y)
        return x + y
    return ambiguous

func ambiguous(a, b, c)
    return a * b * c

fn0()
